@@ -135,8 +135,8 @@ winClipboardFlushXEvents (HWND hwnd,
 	      iReturn = XChangeProperty (pDisplay,
 					 event.xselectionrequest.requestor,
 					 event.xselectionrequest.property,
-					 event.xselectionrequest.target,
-					 sizeof (atomTargetArr[0]),
+					 XA_ATOM,
+					 32,
 					 PropModeReplace,
 					 (unsigned char *) atomTargetArr,
 					 (sizeof (atomTargetArr)
